# EPI_IndieStudio

./: .gitignore  CMakeLists.txt  Makefile  README.md  make  map.txt  notes
.github/workflows/: blank.yml
assets/: dommSlayer_runi[anim]qm.iqm
assets/Tests/: slayer_run.iqm
assets/doom/: lose.iqm  standing.iqm
assets/doomslayer-toy/: Doomslayer Toy.fbx  ImageToStl.com_doomslayer toy.mtl  anim_blender.blend  death.iqm  death_1_1.iqm  drop.iqm  drop_1_1.iqm  lose.iqm  pick_up.iqm  pickup.iqm  pickup_1_1.iqm  run(1).iqm  run.iqm  run_slayer_1_1.iqm  run_slayeriqm.iqm  run_v12.iqm  run_v13.iqm  win.iqm
assets/gladiator/: death.iqm  idle.iqm  run.iqm  win.iqm
assets/gladiator-toy/: death.iqm  lose.iqm  pick.iqm  pickup.fbx  pickup.iqm  run.fbx  run.iqm  standing.iqm  win.iqm
assets/icon/: lose.iqm  pick.iqm  win.iqm
assets/icon-of-sin-toy/: Icon of sin Toy.iqm  death._1_1.iqm  death.iqm  idle.iqm  pick.iqm  pick_1_1.iqm  run._1_1iqm.iqm  run.iqm  standing_1_1.iqm  standingiqm.iqm
assets/map/: bomb.mtl  floor.mtl
assets/marauder/: death.iqm  lose.iqm  pick.iqm  standing.iqm  win.iqm
assets/marauder-toy/: pickup.fbx  run.fbx  run.iqm
src/: GameCreator.hpp  Globals.hpp  main.cpp
src/engine/: Engine.cpp  Engine.hpp
src/engine/objects/: GameObject.cpp  GameObject.hpp
src/engine/objects/Bomb/: Bomb.cpp  Bomb.hpp
src/engine/objects/Brick/: Brick.cpp  Brick.hpp
src/engine/objects/Entities/: Entity.cpp  Entity.hpp  IEntity.hpp
src/engine/objects/Entities/Enemy/: Enemy.cpp  Enemy.hpp
src/engine/objects/Entities/Ia/: Ia.cpp  Ia.hpp
src/engine/objects/Entities/Player/: Player.cpp  Player.hpp
src/engine/objects/PowerUp/: PowerUp.cpp  PowerUp.hpp  SpeedUp.cpp  SpeedUp.hpp
src/engine/objects/Wall/: Wall.cpp  Wall.hpp
src/game control/: GameObject.hpp  IControl.hpp
src/game control/Bomb/: Bomb.cpp  Bomb.hpp
src/game control/Enemy/: Enemy.hpp
src/game control/Entity/: Entity.hpp
src/game control/Entity/Enemy/: Enemy.cpp
src/game control/Entity/Player/: Player.cpp  Player.hpp
src/game control/Player/: Player.cpp  Player.hpp
src/game control/PowerUp/: PowerUp.cpp  PowerUp.hpp
src/graphics/: Display.cpp  Display.hpp  Graphics.cpp  Graphics.hpp  IGame.hpp  IGraphic.hpp
src/graphics/Objects/: Button.cpp  Button.hpp  Cam.cpp  Cam.hpp  MeshMap.hpp  Mouse.cpp  Mouse.hpp  Music.cpp  Music.hpp  Musics.cpp  Musics.hpp  Noise.cpp  Noise.hpp  Picture.cpp  Picture.hpp  Sound.cpp  Sound.hpp  Sprite.cpp  Sprite.hpp  Text.cpp  Text.hpp  tags
src/map/: ErrorMap.hpp  Map.cpp  Map.hpp
src/objects/: Bomb.hpp
